--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,22 @@ html {
  */
 
 body {
+  width: 100%;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans 3', sans-serif;
 }
 
+nav {
+  font-family: 'Bungee', sans-serif;
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  width: 90%;
+  margin: 0 auto;
+  background-color: #f4f1ec;
+ }
