--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -11,7 +11,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .header-background-image {
