--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,6 +3,7 @@ header {
   padding-top: 150px;
   background-color: #00b0b0;
   background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
+  color: white;
 }
 
 .header-container {
