--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,9 +3,10 @@ nav {
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
-  padding: 1.5em;
+  padding: 0 1.5em;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: fixed;
 }
 
