create new tweet container and edit styling of overall page layout

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,8 +10,9 @@ nav {
   position: fixed;
 }
 
-nav .span {
+nav span {
   font-family: 'Bungee', sans-serif;
+  font-size: x-large;
 }
 
 #nav-new-tweet {
