--- a/public/styles/user-tweets.css
+++ b/public/styles/user-tweets.css
@@ -33,7 +33,7 @@ article:hover {
   width: 98%;
 }
 
-footer h5 {
+.tweet-time {
   font-weight: normal;
   font-size: small;
 }
@@ -60,6 +60,7 @@ footer h5 {
   justify-content: space-between;
   padding-left: 25px;
   padding-right: 25px;
+  padding-bottom: 20px;
 }
 
 .fa-solid {
