--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -44,3 +44,15 @@ button[type="submit"] {
 .black {
   color: black;
 }
+
+#empty-error {
+  display: none;
+  color: red;
+  background-color: #f4f1ec;
+}
+
+#counter-exceeded-error {
+  display: none;
+  color: red;
+  background-color: #f4f1ec;
+}
