edit page styling

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -37,6 +37,14 @@ button[type="submit"] {
   resize: none;
 }
 
+.tweet-form {
+  padding: 20px;
+}
+
+h2 {
+  padding: 20px;
+}
+
 .red {
   color: red;
 }
