--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,7 @@
 nav {
-  height: 120px;
+  height: auto;
+  max-height: 120px;
+  min-height: 120px;
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
@@ -8,6 +10,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  top: 0;
+  left: 0;
 }
 
 nav span {
