--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,7 +3,7 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
-html {
+ html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -21,6 +21,8 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans 3', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 nav {
@@ -35,11 +37,27 @@ main {
   margin: 1em auto;
 }
 
+.content {
+  width: 100%;
+}
+
 @media only screen and (min-width: 1024px) {
-  body {
+  .content {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    padding-top: 200px;
+    padding-top: 100px;
+    width: 90%;
+    margin: 1em auto;
+    gap: 100px;
   }
+
+  .header-container {
+    flex: 1;
+  }
+
+  .container {
+    flex: 2;
+  }
+
 }
