--- a/public/styles/user-tweets.css
+++ b/public/styles/user-tweets.css
@@ -25,7 +25,8 @@ article:hover {
 
 #tweet-content {
   padding-left: 25px;
-  padding-right: 25px
+  padding-right: 25px;
+  word-break: break-all;
 }
 
 .user-tweets-horizonLine {
