--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,8 +3,9 @@ nav {
   max-height: 120px;
   min-height: 120px;
   width: 100%;
-  background-color: #4056A1;
-  color: #FFFFFF;
+  background-color: #00b0b0;
+  background-image: url("/images/arabesque.png");
+  color: white;
   padding: 0 1.5em;
   display: flex;
   justify-content: space-between;
@@ -38,4 +39,12 @@ nav span {
 .fa-angles-down {
   color: red;
   padding-top: 10px;
+}
+
+@media only screen and (min-width: 1024px) {
+  nav {
+    background-color: #4056A1;
+    background-image: none;
+    color: #FFFFFF;
+  }
 }
